# trace-span

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/trace_span/: __init__.py  core.py
src/trace_span.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_span.py
